SDK V1 for test

--- a/Adeona Ad Inject Android SDK/src/main/res/values/attrs.xml
+++ b/Adeona Ad Inject Android SDK/src/main/res/values/attrs.xml
@@ -2,7 +2,9 @@
 <resources>
 
     <declare-styleable name="BannerView">
-        <attr name="image" format="reference"/>
-        <attr name="text" format="string"/>
+        <attr name="addtext" format="string"/>
+        <attr name="guide_progressTextColor" format="color"/>
     </declare-styleable>
+
+
 </resources>
