--- a/Adeona Ad Inject Android SDK/src/main/res/layout/layout_banner.xml
+++ b/Adeona Ad Inject Android SDK/src/main/res/layout/layout_banner.xml
@@ -1,36 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_banner_main"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="100dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.AppCompatImageView
+       <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_adspace_banner"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:image="@drawable/ic_add_close"
             app:layout_constraintLeft_toLeftOf="parent" />
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent" />
-
-
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_adspace_banner_close"
             android:layout_width="30dp"
@@ -39,6 +27,15 @@
             app:layout_constraintTop_toTopOf="parent"
             android:padding="5dp"
             android:src="@drawable/ic_add_close" />
+        <ProgressBar
+            android:id="@+id/progressBar_banner_loading"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"  />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
